; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_rgrp.c_rs_cmp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_rgrp.c_rs_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gfs2_blkreserv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.gfs2_blkreserv*)* @rs_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rs_cmp(i32 %0, i32 %1, %struct.gfs2_blkreserv* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.gfs2_blkreserv*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store %struct.gfs2_blkreserv* %2, %struct.gfs2_blkreserv** %7, align 8
  %9 = load %struct.gfs2_blkreserv*, %struct.gfs2_blkreserv** %7, align 8
  %10 = getelementptr inbounds %struct.gfs2_blkreserv, %struct.gfs2_blkreserv* %9, i32 0, i32 1
  %11 = call i32 @gfs2_rbm_to_block(i32* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %8, align 4
  %14 = load %struct.gfs2_blkreserv*, %struct.gfs2_blkreserv** %7, align 8
  %15 = getelementptr inbounds %struct.gfs2_blkreserv, %struct.gfs2_blkreserv* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %13, %16
  %18 = icmp sge i32 %12, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %29

20:                                               ; preds = %3
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = add nsw i32 %21, %22
  %24 = sub nsw i32 %23, 1
  %25 = load i32, i32* %8, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  store i32 -1, i32* %4, align 4
  br label %29

28:                                               ; preds = %20
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %27, %19
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @gfs2_rbm_to_block(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
